src/App.scss
@import url("https://fonts.googleapis.com/css?family=Lexend+Mega&display=swap");

.img-left-col {
  background-image: url("./images/left-col.jpg");
  background-position: center;
  background-size: cover;
  max-height: 100vh;
  height: 100%;
  width: 100%;
}

.img-left-col-container {
  float: left;
}

.greeting {
  border-bottom: solid 5px #212529;
  font-size: 2.4rem;
}

.App {
  height: 100vh;
  width: 100vw;
  overflow-y: auto;
  overflow-x: hidden;
}

@media (max-width: 575.98px) {
  .greeting {
    border-bottom: solid 5px #212529;
    font-size: 1.6rem;
    margin-top: 10px;
  }

  .App {
    overflow: scroll;
    height: auto !important;
    width: auto !important;
  }

  .img-left-col-container {
    height: 25vh;
  }

  .landing-text {
    text-justify: newspaper;
    transition: all 0.3s ease-in-out;
  }

  .landing {
    height: 100%;
  }
}

/* #accordion {
  max-height: 100vh !important;
  overflow-y: auto;
} */

.icon {
  max-height: 50px;
}

.text-container {
  background-color: #f0f0f0;
  border: none !important;
}

.pointer:hover {
  cursor: pointer;
}

.language-switcher {
  h6 {
    font-weight: bold;
    cursor: pointer;
  }

  h6:hover {
    text-decoration: underline;
    cursor: pointer;
  }
}

